--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -46,6 +46,7 @@ $blueBright: #06f;
 $blueDark: darken(#265cdc,9%);
 $yellow: #ffc43a;
 $yellowLight: #ffdd2d;
+$yellowBright: #FFF45F;
 $orange: #ea7f07;
 $orangeDark: darken(#ea7f07,9%);
 $brown: #c1a16b;
