--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -35,75 +35,58 @@
 @import 'partials/navFixed';
 
 // auth
-// @import 'sections/auth';
+@import 'sections/auth';
 
 // home
-// @import 'sections/home/home';
-// @import 'sections/home/header';
-// @import 'sections/home/functions';
-// @import 'sections/home/jqtest';
-// @import 'sections/home/sections';
-// @import 'sections/home/testdrive';
-// @import 'sections/home/footer';
+@import 'sections/home/home';
+@import 'sections/home/header';
+@import 'sections/home/functions';
+@import 'sections/home/jqtest';
+@import 'sections/home/sections';
+@import 'sections/home/testdrive';
+@import 'sections/home/footer';
 
 // jqtest
-// @import '../../assets/css/sections/jqtest/jqtest';
-// @import '../../assets/css/sections/jqtest/jqtestEnter';
-// @import '../../assets/css/sections/jqtest/result/main';
-// @import '../../assets/css/sections/jqtest/result/columns';
-// @import '../../assets/css/sections/jqtest/result/skills';
-// @import '../../assets/css/sections/jqtest/result/humps';
-// @import '../../assets/css/sections/jqtest/result/graph';
-// @import '../../assets/css/sections/jqtest/result/specialties';
-// @import '../../assets/css/sections/jqtest/result/path';
+@import '../../assets/css/sections/jqtest/jqtest';
+@import '../../assets/css/sections/jqtest/jqtestEnter';
+@import '../../assets/css/sections/jqtest/result/main';
+@import '../../assets/css/sections/jqtest/result/columns';
+@import '../../assets/css/sections/jqtest/result/skills';
+@import '../../assets/css/sections/jqtest/result/humps';
+@import '../../assets/css/sections/jqtest/result/graph';
+@import '../../assets/css/sections/jqtest/result/specialties';
+@import '../../assets/css/sections/jqtest/result/path';
 
 // blog
-// @import 'sections/blog/blog';
-// @import 'sections/blog/header';
-// @import 'sections/blog/grid';
-// @import 'sections/blog/shareButton';
-// @import 'sections/blog/pagination';
-// @import 'sections/blog/content';
-// @import 'sections/blog/social';
+@import 'sections/blog/blog';
+@import 'sections/blog/header';
+@import 'sections/blog/grid';
+@import 'sections/blog/shareButton';
+@import 'sections/blog/pagination';
+@import 'sections/blog/content';
+@import 'sections/blog/social';
 
 // jobs
-@import 'sections/jobs/jobs';
-@import 'sections/jobs/header';
-@import 'sections/jobs/ui';
-@import 'sections/jobs/search/nav/nav';
-@import 'sections/jobs/search/nav/header';
-@import 'sections/jobs/search/nav/menu';
-@import 'sections/jobs/search/nav/options';
-@import 'sections/jobs/search/search';
-@import 'sections/jobs/search/list';
-@import 'sections/jobs/search/filter';
-@import 'sections/jobs/search/aside';
-@import 'sections/jobs/search/pages';
-@import 'sections/jobs/search/progress';
-@import 'sections/jobs/search/ui';
-
-// vacancy
-@import 'sections/jobs/vacancy/vacancy';
-@import 'sections/jobs/responsive';
+@import 'sections/jobs/home';
 
 // modules
-// @import '../../assets/css/modules/chart/chartRadial';
+@import '../../assets/css/modules/chart/chartRadial';
 @import '../../assets/css/modules/oScreen';
 
 // Sections
 @import '../../assets/css/sections/sections';
 
 // overview
-// @import '../../assets/css/sections/overview/main';
-// @import '../../assets/css/sections/overview/premium/header';
-// @import '../../assets/css/sections/overview/premium/slides';
-// @import '../../assets/css/sections/overview/premium/devices';
-// @import '../../assets/css/sections/overview/jqtest/slides';
-// @import '../../assets/css/sections/overview/overviewFunctions';
-//
-// @import '../../assets/css/sections/offers/premium/premium';
-// @import '../../assets/css/sections/offers/premium/slides';
-// @import '../../assets/css/sections/offers/premium/ui';
+@import '../../assets/css/sections/overview/main';
+@import '../../assets/css/sections/overview/premium/header';
+@import '../../assets/css/sections/overview/premium/slides';
+@import '../../assets/css/sections/overview/premium/devices';
+@import '../../assets/css/sections/overview/jqtest/slides';
+@import '../../assets/css/sections/overview/overviewFunctions';
+
+@import '../../assets/css/sections/offers/premium/premium';
+@import '../../assets/css/sections/offers/premium/slides';
+@import '../../assets/css/sections/offers/premium/ui';
 
 // states
 @import '../../assets/css/states/states';
