--- a/views/jobs.html
+++ b/views/jobs.html
@@ -22,7 +22,7 @@
     <meta name="format-detection" content="telephone=no" />
 	<meta name="google" content="notranslate" />
     <link rel="manifest" href="/manifest.json">
-    <link id="styles" rel="stylesheet" href="/public/css/style.css">
+    <link id="styles" rel="stylesheet" href="/public/css/jobs.css">
 </head>
 <body id="renderServer">
 
@@ -31,7 +31,7 @@
     <section-notify></section-notify>
 
     <!--/ VENDORS /-->
-    <script src="/assets/js/libs/jquery.min.js"></script>
+    <!-- <script src="/assets/js/libs/jquery.min.js"></script>
     <script src="/assets/js/libs/jquery.mobile.custom.min.js"></script>
     <script src="/assets/js/libs/modernizr.custom.js"></script>
     <script src="/assets/js/libs/fastclick.min.js"></script>
@@ -42,11 +42,12 @@
     <script src="/assets/js/libs/moment.ru.js"></script>
     <script src="/assets/js/libs/store.min.js"></script>
     <script src="/assets/js/libs/url.min.js"></script>
+    <script src="/assets/js/libs/afterlag-js/dist/afterlag.min.js"></script> -->
+    <script src="/public/js/app.jobs.libs.js"></script>
     <script src="/assets/js/libs/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
-    <script src="/assets/js/libs/afterlag-js/dist/afterlag.min.js"></script>
 
     <!--/ templates /-->
-    <script src="/public/templates/commons/modules/auth/auth.tag" type="riot/tag"></script>
+    <!-- <script src="/public/templates/commons/modules/auth/auth.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/modules/auth/authSocial.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/modules/auth/forms/signIn.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/modules/auth/forms/signUp.tag" type="riot/tag"></script>
@@ -74,10 +75,11 @@
     <script src="/public/templates/commons/icons/social/icon-vk.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/social/icon-tw.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/social/icon-dk.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/icons/social/icon-gl.tag" type="riot/tag"></script>
+    <script src="/public/templates/commons/icons/social/icon-gl.tag" type="riot/tag"></script> -->
+    <script src="/public/js/templates.jobs.js"></script>
 
     <!--/ JS components /-->
-    <script src="/assets/js/components/commons/app.js"></script>
+    <!-- <script src="/assets/js/components/commons/app.js"></script>
     <script src="/assets/js/components/commons/request.js"></script>
     <script src="/assets/js/components/commons/afterlag.js"></script>
     <script src="/assets/js/components/commons/common.js"></script>
@@ -89,7 +91,7 @@
     <script src="/public/js/commons/config.js"></script>
     <script src="/public/js/commons/metrika.js"></script>
     <script src="/public/js/commons/sections.js"></script>
-    <script src="/assets/js/store/jobs/dictionary.js"></script>
+    <script src="/public/js/store/jobs/dictionary.js"></script>
 
     <script src="/assets/js/plugins/chartRadial.js"></script>
     <script src="/assets/js/plugins/animate.js"></script>
@@ -108,7 +110,8 @@
     <script src="/public/js/sections/blog.js"></script>
     <script src="/public/js/sections/blogContent.js"></script>
     <script src="/public/js/sections/jobs/jobsHome.js"></script>
-    <script src="/public/js/sections/jobs/jobsSearch.js"></script>
+    <script src="/public/js/sections/jobs/jobsSearch.js"></script> -->
+    <script src="/public/js/app.jobs.js"></script>
 
     {% if clusters %}
     <script>
