--- a/public/css/sections/jobs/_ui.scss
+++ b/public/css/sections/jobs/_ui.scss
@@ -1,15 +1,56 @@
 .jobs {
+    padding-top:160px;
+    @extend .fontFamily-helvetica;
+
+    .section__container {
+        @extend .pos-rel;
+        @extend .w90p;
+        @extend .centered;
+        max-width:770px;
+        @extend .pt-s;
+        @extend .pb-l;
+    }
+    h1.title {
+        @extend .c-grayDarken;
+        @extend .fontFamily-roboto;
+        @extend .fontWeight-bold;
+        font-size:31.5px;
+        line-height:33px;
+        letter-spacing:-0.025em;
+        margin-left:-2px;
+    }
+    a.link {
+        @extend .c-blueLight;
+        @extend .transition-default;
+        border-bottom:1px solid rgba($blueLight,.3);
+
+        &:hover {
+            @extend .c-green;
+            border-color:rgba($green,.3);
+        }
+        &.link-l {
+            @extend .fontSize-20;
+            @extend .letterSpacing--xs;
+        }
+    }
+    .borderColor-smoke {
+        border-color:#E0E6ED;
+    }
+    .borderColor-smokeDark {
+        border-color:rgba($silver,.3);
+    }
+    .borderColor-smokeDarken {
+        border-color:#C0CCDA;
+    }
     .btn {
         @extend .text-uppercase;
 
         &-xl {
             font-size:17px;
         }
-        &-l {
-            font-size:16px;
-        }
+        &-l,
         &-m {
-            font-size:15px;
+            font-size:16px;
         }
     }
     .btn-default {
@@ -30,10 +71,25 @@
         &:active {
             @extend .scale-90;
         }
+        &.btn-white {
+            @extend .bg-none;
+            @extend .c-white;
+            box-shadow:inset 0 0 0 1px rgba($white,.3);
+
+            &:hover {
+                @extend .bg-white;
+                box-shadow:inset 0 0 0 1px rgba($white,.5);
+            }
+        }
         &.btn-m {
             @extend .fontSize-14;
             @extend .h32;
             @extend .plr-xs;
+        }
+        &.btn-l {
+            @extend .fontSize-15;
+            @extend .h44;
+            @extend .plr-m;
         }
     }
     .btn-primary-hover-success {
@@ -51,12 +107,51 @@
             }
         }
     }
-    .btn-danger-hover-success {
-        @extend .c-white;
-        @extend .bg-redBright;
+    .input[type="text"]{
+        &:focus {
+            box-shadow:inset 0 0 0 1px $blueBright;
+        }
+        &.input {
+            @extend .fontFamily-graphik;
 
-        &:hover {
+            &-m {
+                font-size:16px;
+            }
+            &-s {
+                font-size:15px;
+            }
+        }
+    }
+    .input-svg path {
+        @extend .fill-grayLight;
+    }
+    .input-group-m .input-icon {
+        .input-svg-search {
+            @extend .w22;
+            @extend .h22;
+        }
+        .input-svg-location {
+            @extend .w32;
+            @extend .h32;
+            transform:translateY(3px);
+        }
+    }
+    ui-input {
+        &.focused + {
+            .input-icon path {
+                @extend .fill-blueBright;
+            }
+        }
+    }
+    .input-autosuggest-items {
+        .input-autosuggest-item:hover,
+        .input-autosuggest-item[data-active="true"] {
+            @extend .c-white;
             @extend .bg-green;
         }
+    }
+    [data-balloon]:after {
+        @extend .fontFamily-helvetica;
+        @extend .letterSpacing-0;
     }
 }
